tests/paczka1/fuzzy1/73998639.err
Error in line 1: XsUeA6d5kFH A543 84,8
Error in line 9: A561 S324 38,6
Error in line 2: LOJfH A561 59,8
Error in line 27: LOJfH S324 31,1
